Revise privacy policy with updates and new sections
Updated the privacy policy to reflect new last updated date, payment processing details, and added sections on monetization and consent.

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <h1>Privacy Policy for Best4IPTV</h1>
-    <p><strong>Last Updated:</strong> January 9, 2025</p>
+    <p><strong>Last Updated:</strong> November 10, 2025</p>
 
     <div class="important">
         <h3>⚠️ Important Notice</h3>
@@ -43,7 +43,7 @@
     <h3>1.3 Information We DO NOT Collect</h3>
     <ul>
         <li>❌ Personal identification information (name, email, phone number)</li>
-        <li>❌ Payment information (the app is completely free)</li>
+        <li>❌ Payment information (processed by Google Play)</li>
         <li>❌ Browsing history outside the app</li>
         <li>❌ Contact lists or other personal data</li>
     </ul>
@@ -82,7 +82,8 @@
     <ul>
         <li><strong>LOCATION:</strong> Used only for weather feature (can be denied)</li>
         <li><strong>STORAGE:</strong> Used for recording feature (required only if you use recording)</li>
-        <li><strong>NOTIFICATIONS:</strong> Used for recording notifications and program reminders</li>
+        <li><strong>NOTIFICATIONS (Android 13+):</strong> Used for recording notifications and program reminders; requires user consent on Android 13 and above</li>
+        <li><strong>Advertising ID (AD_ID):</strong> Used by Google Mobile Ads SDK for ad delivery (e.g., frequency capping, fraud prevention). We do not use it for purposes outside advertising. You can reset the Advertising ID from your device settings.</li>
     </ul>
 
     <h2>5. Your Rights</h2>
@@ -108,15 +109,62 @@
 
     <h2>8. Third-Party Services</h2>
     <ul>
+        <li><strong>Google Play Billing:</strong> For in-app purchases and subscriptions</li>
+        <li><strong>Google AdMob:</strong> For displaying ads in free version</li>
+        <li><strong>Google User Messaging Platform (UMP):</strong> For collecting and managing user consent for ads in applicable regions (e.g., GDPR/EEA)</li>
         <li><strong>Google Cast:</strong> For Chromecast functionality (optional)</li>
         <li><strong>ExoPlayer:</strong> For media playback (no data collection)</li>
     </ul>
-    <p>We DO NOT use: Analytics services, Advertising networks, Social media integrations</p>
+    <p><strong>Third-Party Privacy Policies:</strong></p>
+    <ul>
+        <li>Google AdMob: <a href="https://policies.google.com/privacy">https://policies.google.com/privacy</a></li>
+        <li>Google Play: <a href="https://policies.google.com/privacy">https://policies.google.com/privacy</a></li>
+    </ul>
 
     <h2>9. Changes to This Policy</h2>
     <p>We may update this Privacy Policy from time to time. We will notify you by updating the "Last Updated" date and displaying a notice in the app.</p>
 
-    <h2>10. Contact Us</h2>
+    <h2>10. Monetization</h2>
+    
+    <h3>10.1 In-App Purchases</h3>
+    <ul>
+        <li><strong>Premium Subscriptions:</strong> We offer premium subscriptions (monthly, yearly) and one-time purchases (lifetime)</li>
+        <li><strong>Payment Processing:</strong> All payments are processed securely by Google Play</li>
+        <li><strong>No Payment Data Storage:</strong> We do not store or have access to your payment information</li>
+        <li><strong>Subscription Management:</strong> You can manage or cancel subscriptions through Google Play Store</li>
+    </ul>
+
+    <h3>10.2 Advertising</h3>
+    <ul>
+        <li><strong>Free Version Ads:</strong> The free version displays ads from Google AdMob</li>
+        <li><strong>When Ads Appear:</strong> Ads are shown only after the 3-day free trial and only for non-premium users. No ads during the trial period or for Premium users.</li>
+        <li><strong>Placement:</strong> Banner ads may appear on the Home screen. Interstitial ads may appear between safe navigation actions and are <em>never</em> shown during video playback or on Back/Exit.</li>
+        <li><strong>Ad Frequency:</strong> Interstitials appear intermittently (for example, about every 3 actions).</li>
+        <li><strong>Advertising ID (AD_ID):</strong> Used by the Google Mobile Ads SDK for ad delivery (e.g., frequency capping, fraud prevention). You can reset or limit ad personalization in your device settings.</li>
+        <li><strong>Ad Data Collection:</strong> AdMob may collect device information (e.g., device identifiers, IP address) to provide ads according to its privacy policy.</li>
+        <li><strong>Ad-Free Experience:</strong> Premium users enjoy an ad‑free experience.</li>
+        <li><strong>Ad Partners:</strong> Google AdMob</li>
+    </ul>
+
+    <h3>10.3 Free Trial</h3>
+    <ul>
+        <li><strong>3-Day Trial:</strong> New installs receive a 3‑day full‑feature trial (no ads, access to recording and Picture‑in‑Picture).</li>
+        <li><strong>After Trial:</strong> Ads are enabled and certain premium features may be restricted unless you upgrade to Premium.</li>
+        <li><strong>Local-Only:</strong> Trial status is stored locally on your device using SharedPreferences and is not transmitted to our servers.</li>
+    </ul>
+
+    <div class="notice">
+        <strong>Note:</strong> Advertising data is collected by Google AdMob according to their privacy policy. We do not have access to this data.
+    </div>
+
+    <h2>11. Consent and Choices (GDPR/EEA)</h2>
+    <ul>
+        <li><strong>Consent Tool:</strong> In applicable regions, the app uses Google’s User Messaging Platform (UMP) to request your consent for personalized or non‑personalized ads.</li>
+        <li><strong>Your Options:</strong> You may choose personalized ads, non‑personalized ads, or opt out where applicable. When you choose non‑personalized ads, we pass the appropriate signals (e.g., NPA) to AdMob.</li>
+        <li><strong>Change Your Choice:</strong> You can revisit consent from the app’s settings (when available) or reset the consent form by clearing app data.</li>
+    </ul>
+
+    <h2>12. Contact Us</h2>
     <p>If you have questions about this Privacy Policy:</p>
     <ul>
         <li><strong>Email:</strong> support@best4iptv.com</li>
