--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <h1>Privacy Policy for Best4IPTV</h1>
-    <p><strong>Last Updated:</strong> November 10, 2025</p>
+    <p><strong>Last Updated:</strong> November 11, 2025</p>
 
     <div class="important">
         <h3>⚠️ Important Notice</h3>
@@ -51,7 +51,7 @@
     <h2>2. How We Use Your Information</h2>
     
     <div class="notice">
-        <strong>Local Storage Only:</strong> All your data is stored locally on your device. We do not transmit, share, or upload your information to any external servers.
+        <strong>Data handling:</strong> We do not transmit your IPTV server credentials (URLs, usernames, passwords), favorites, or viewing history to our servers; these remain on your device. However, the app communicates with certain third‑party services to provide features, including Google AdMob (ads), Google User Messaging Platform (consent), Google Cast (optional), and an IP‑based geolocation service to display approximate weather when location permission is not granted.
     </div>
 
     <h3>Purposes:</h3>
@@ -80,7 +80,7 @@
 
     <h3>Optional Permissions:</h3>
     <ul>
-        <li><strong>LOCATION:</strong> Used only for weather feature (can be denied)</li>
+        <li><strong>LOCATION:</strong> Used only for the weather feature. If permission is denied, the app may derive an approximate location via IP to display weather. You can disable the weather feature from the app settings to stop using GPS and IP-based location.</li>
         <li><strong>STORAGE:</strong> Used for recording feature (required only if you use recording)</li>
         <li><strong>NOTIFICATIONS (Android 13+):</strong> Used for recording notifications and program reminders; requires user consent on Android 13 and above</li>
         <li><strong>Advertising ID (AD_ID):</strong> Used by Google Mobile Ads SDK for ad delivery (e.g., frequency capping, fraud prevention). We do not use it for purposes outside advertising. You can reset the Advertising ID from your device settings.</li>
@@ -114,11 +114,13 @@
         <li><strong>Google User Messaging Platform (UMP):</strong> For collecting and managing user consent for ads in applicable regions (e.g., GDPR/EEA)</li>
         <li><strong>Google Cast:</strong> For Chromecast functionality (optional)</li>
         <li><strong>ExoPlayer:</strong> For media playback (no data collection)</li>
+        <li><strong>IP Geolocation (ip-api.com):</strong> To derive approximate location via IP for the weather feature when location permission is not granted.</li>
     </ul>
     <p><strong>Third-Party Privacy Policies:</strong></p>
     <ul>
         <li>Google AdMob: <a href="https://policies.google.com/privacy">https://policies.google.com/privacy</a></li>
         <li>Google Play: <a href="https://policies.google.com/privacy">https://policies.google.com/privacy</a></li>
+        <li>ip-api.com: <a href="https://ip-api.com/docs/legal">https://ip-api.com/docs/legal</a></li>
     </ul>
 
     <h2>9. Changes to This Policy</h2>
@@ -170,4 +172,3 @@
     </div>
 </body>
 </html>
-
