--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -43,7 +43,6 @@
     <h3>1.3 Information We DO NOT Collect</h3>
     <ul>
         <li>❌ Personal identification information (name, email, phone number)</li>
-        <li>❌ Payment information (processed by Google Play)</li>
         <li>❌ Browsing history outside the app</li>
         <li>❌ Contact lists or other personal data</li>
     </ul>
@@ -109,7 +108,6 @@
 
     <h2>8. Third-Party Services</h2>
     <ul>
-        <li><strong>Google Play Billing:</strong> For in-app purchases and subscriptions</li>
         <li><strong>Google AdMob:</strong> For displaying ads in free version</li>
         <li><strong>Google User Messaging Platform (UMP):</strong> For collecting and managing user consent for ads in applicable regions (e.g., GDPR/EEA)</li>
         <li><strong>Google Cast:</strong> For Chromecast functionality (optional)</li>
@@ -119,7 +117,6 @@
     <p><strong>Third-Party Privacy Policies:</strong></p>
     <ul>
         <li>Google AdMob: <a href="https://policies.google.com/privacy">https://policies.google.com/privacy</a></li>
-        <li>Google Play: <a href="https://policies.google.com/privacy">https://policies.google.com/privacy</a></li>
         <li>ip-api.com: <a href="https://ip-api.com/docs/legal">https://ip-api.com/docs/legal</a></li>
     </ul>
 
@@ -127,32 +124,15 @@
     <p>We may update this Privacy Policy from time to time. We will notify you by updating the "Last Updated" date and displaying a notice in the app.</p>
 
     <h2>10. Monetization</h2>
-    
-    <h3>10.1 In-App Purchases</h3>
+    <h3>10.1 Advertising</h3>
     <ul>
-        <li><strong>Premium Subscriptions:</strong> We offer premium subscriptions (monthly, yearly) and one-time purchases (lifetime)</li>
-        <li><strong>Payment Processing:</strong> All payments are processed securely by Google Play</li>
-        <li><strong>No Payment Data Storage:</strong> We do not store or have access to your payment information</li>
-        <li><strong>Subscription Management:</strong> You can manage or cancel subscriptions through Google Play Store</li>
-    </ul>
-
-    <h3>10.2 Advertising</h3>
-    <ul>
-        <li><strong>Free Version Ads:</strong> The free version displays ads from Google AdMob</li>
-        <li><strong>When Ads Appear:</strong> Ads are shown only after the 3-day free trial and only for non-premium users. No ads during the trial period or for Premium users.</li>
+        <li><strong>Free and ad-supported:</strong> Best4IPTV is completely free and supported by advertising to keep the service free for everyone.</li>
+        <li><strong>Ads:</strong> The app displays ads from Google AdMob.</li>
         <li><strong>Placement:</strong> Banner ads may appear on the Home screen. Interstitial ads may appear between safe navigation actions and are <em>never</em> shown during video playback or on Back/Exit.</li>
-        <li><strong>Ad Frequency:</strong> Interstitials appear intermittently (for example, about every 3 actions).</li>
+        <li><strong>Ad Frequency:</strong> Interstitials appear intermittently during navigation and are never shown during video playback or when you press Back/Exit.</li>
         <li><strong>Advertising ID (AD_ID):</strong> Used by the Google Mobile Ads SDK for ad delivery (e.g., frequency capping, fraud prevention). You can reset or limit ad personalization in your device settings.</li>
         <li><strong>Ad Data Collection:</strong> AdMob may collect device information (e.g., device identifiers, IP address) to provide ads according to its privacy policy.</li>
-        <li><strong>Ad-Free Experience:</strong> Premium users enjoy an ad‑free experience.</li>
         <li><strong>Ad Partners:</strong> Google AdMob</li>
-    </ul>
-
-    <h3>10.3 Free Trial</h3>
-    <ul>
-        <li><strong>3-Day Trial:</strong> New installs receive a 3‑day full‑feature trial (no ads, access to recording and Picture‑in‑Picture).</li>
-        <li><strong>After Trial:</strong> Ads are enabled and certain premium features may be restricted unless you upgrade to Premium.</li>
-        <li><strong>Local-Only:</strong> Trial status is stored locally on your device using SharedPreferences and is not transmitted to our servers.</li>
     </ul>
 
     <div class="notice">
